[package]
name = "eltor"
version = "0.0.1"
edition = "2018"

[dependencies]
libtor = { path = "../libeltor/libtor" }
libtor-sys = { path = "../libeltor-sys"  }
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.15"
futures-util = "0.3.31"
lni = { path = "../lni/crates/lni" }
lazy_static = "1.4.0"
dotenv = "0.15.0"
thiserror = "1.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = { version = "0.8", features = ["std", "small_rng"] }
base64 = "0.13.0"
sha2 = "0.10.8"
hex = "0.4.3"

[[bin]]
name = "eltor"
path = "src/main.rs"

[features]
vendored-openssl = ["libtor-sys/vendored-openssl"]
default = ["vendored-openssl"]