[package]
name = "eltor"
version = "0.0.1"
edition = "2018"
description = "Tor network fork with paid relay functionality and Lightning Network integration"
readme = "readme.md"
repository = "https://github.com/el-tor/eltord"
license = "MIT"
keywords = ["tor", "lightning", "privacy", "bitcoin", "networking"]
categories = ["network", "bitcoin", "privacy"]

[lib]
name = "eltor"
path = "src/lib.rs"

[[bin]]
name = "eltor"
path = "src/main.rs"

[dependencies]
# libtor = { git = "https://github.com/el-tor/libeltor.git", branch = "master" }
libtor = { path = "../libeltor/libtor" }
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.15"
futures-util = "0.3.31"
lni = { git = "https://github.com/lightning-node-interface/lni.git", branch = "master" }
# lni = { path = "../lni/crates/lni" }
lazy_static = "1.4.0"
dotenv = "0.15.0"
thiserror = "1.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = { version = "0.8", features = ["std", "small_rng"] }
base64 = "0.13.0"
sha2 = "0.10.8"
hex = "0.4.3"
chrono = "0.4"
tokio-test = "0.4"
env_logger = "0.10"
log = "0.4"
ctrlc = "3.4"
async-trait = "0.1"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[features]
# Forward the vendored OpenSSL feature to the libtor crate, which in turn
# enables vendored OpenSSL in libtor-sys. This allows building with
# `--features vendored-openssl` from this root crate.
vendored-openssl = ["libtor/vendored-openssl"]
# Optional: you can add other forward features similarly if needed in the future
# vendored-lzma = ["libtor/vendored-lzma"]
# vendored-zstd = ["libtor/vendored-zstd"]
# with-lzma = ["libtor/with-lzma"]
# with-zstd = ["libtor/with-zstd"]
